fix(): logo size on mobiles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -83,11 +83,6 @@
 	font-weight: normal;
 }
 
-a.logo {
-	color: #000;
-	font-size: 48px;
-}
-
-a.logo img {
-	display: inline;
+a.logo-mobile {
+	margin-bottom: 8px;
 }
